--- a/jobs_finite/src/homePage/homePage.css
+++ b/jobs_finite/src/homePage/homePage.css
@@ -2,19 +2,20 @@
 
 .zoom {
     width: 300px;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
     margin: 0 auto;
     cursor: pointer;
-    border-radius: 150px;
+    border-radius: 30px;
 }
    
 .zoom img {
     width: 100%;
+    height: 100%;
     transition: 0.5s all ease-in-out;
 }
    
 .zoom:hover  {
-    transform: scale(1.25);
-    transition: 0.4s all ease-in-out;
+    transform: scale(1.1);
+    transition: 0.45s all ease-in-out;
 }
