--- a/jobs_finite/src/homePage/homePage.css
+++ b/jobs_finite/src/homePage/homePage.css
@@ -1,21 +1,67 @@
 
 
 .zoom {
-    width: 300px;
+    width: 350px;
     height: 400px;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin: 0 auto;
     cursor: pointer;
-    border-radius: 30px;
+    /* border-radius: 30px; */
 }
    
 .zoom img {
     width: 100%;
     height: 100%;
+    object-fit: scale-down;
+    border: 2px solid black;
+    border-radius: 10px;
     transition: 0.5s all ease-in-out;
 }
    
 .zoom:hover  {
-    transform: scale(1.1);
+    transform: scale(1.04);
     transition: 0.45s all ease-in-out;
+    box-shadow: 10px 10px 10px 10px gray;
+}
+#homepage-main-outside{
+    background-color: gray;
+}
+#homepage-main{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    max-width: 900px;
+    margin: auto;
+    background: white;
+}
+#homepage-main .job-category{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-size: 20px;
+}
+
+@media screen and (max-width: 450px) {
+    #homepage-main-outside{
+        background-color: white;
+    }
+    #homepage-main{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    #homepage-main .zoom {
+        width: 200px;
+        height: 200px;
+    }
+    #homepage-main .job-category{
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 30px;
+        font-size: 20px;
+    }
+
 }
