--- a/jobs_finite/src/homePage/homePage.css
+++ b/jobs_finite/src/homePage/homePage.css
@@ -11,20 +11,25 @@
    
 .zoom img {
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: scale-down;
-    border: 2px solid black;
-    border-radius: 10px;
+
     transition: 0.5s all ease-in-out;
 }
+.hovering-effect{
+    padding-bottom: 20px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
    
-.zoom:hover  {
+.hovering-effect:hover  {
     transform: scale(1.04);
     transition: 0.45s all ease-in-out;
-    box-shadow: 10px 10px 10px 10px gray;
+    box-shadow: 6px 6px 40px 10px gray;
 }
 #homepage-main-outside{
     background-color: gray;
+    margin-bottom: 50px;
 }
 #homepage-main{
     display: flex;
@@ -35,11 +40,17 @@
     margin: auto;
     background: white;
 }
-#homepage-main .job-category{
+#homepage-main .zoom{
+    position: relative;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 40px;
+}
+#homepage-main .zoom .job-category{
+    z-index: 2;
+    position: absolute;
     font-size: 20px;
+    top: 96%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 @media screen and (max-width: 450px) {
