--- a/jobs_finite/src/header/Header.css
+++ b/jobs_finite/src/header/Header.css
@@ -58,13 +58,13 @@
     text-decoration: none;
     justify-content: space-around;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 #navbar-main a{
     /* height: 100%; */
     text-decoration: none;
     color: white;
-    padding: 10px;
+    padding: 4.5px;
     padding-left: 20px;
     padding-right: 20px;
     list-style: none;
@@ -74,6 +74,49 @@
     color: black;
     transition: 0.6s ease;
 }
+/* }
+.dropdown{
+    position: relative;
+}
+/* .dropdown > .link:focus .link:hover{
+    background-color: black;
+    color: white;
+} */
+/*
+.dropdown-menu{
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: calc(100% + .28rem);
+    background-color: gray;
+    /* padding: 4.5px; */
+    /*
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 3);
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+#up-arrow{
+    display: none;
+}
+#down-arrow{
+    display: inline-block;
+}
+.dropdown > .link:focus + .dropdown-menu{
+    opacity: 1;
+    transform: translateY(0px);
+    pointer-events: auto;
+}
+.dropdown-menu{
+    display: flex;
+    flex-direction: column;
+}
+
+#navbar-main .dropdown .dropdown-menu a{
+    z-index: 1;
+} */
 @media screen and (max-width: 767px) {
     #header-main {
         margin-top: 1%;
