--- a/jobs_finite/src/homePage/homePage.css
+++ b/jobs_finite/src/homePage/homePage.css
@@ -53,6 +53,19 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+#marquee-footer{
+    box-sizing: border-box;
+}
+#marquee-footer .column{
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+#marquee-footer::after{
+    content: "";
+    display: table;
+    clear: both;
+}
 
 @media screen and (max-width: 450px) {
     #homepage-main-outside{
