--- a/jobs_finite/src/governmentportal/government.css
+++ b/jobs_finite/src/governmentportal/government.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 #govtpage-main-outside{
     background-color: gray;
 }
@@ -10,7 +13,7 @@
     padding-bottom: 20px;
 }
 #govtpage-main table{
-    table-layout: fixed;
+    table-layout: auto;
     box-sizing: border-box;
     overflow: hidden;
     width: 100%;
@@ -37,4 +40,18 @@ table, th, td {
     background-color: lightgray;
     color: brown;
     font-weight: 600;
+}
+@media screen and (max-width: 450px) {
+    #govtpage-main{
+        font-size: small;
+    }
+    #govtpage-main{
+        width: 100%;
+        padding-left: 5px;
+        margin: auto 0;
+    }
+    #govtpage-main table{
+        /* margin: auto; */
+        margin-right: 30px;
+    }
 }
