--- a/jobs_finite/src/header/Header.css
+++ b/jobs_finite/src/header/Header.css
@@ -74,6 +74,7 @@
     color: black;
     transition: 0.6s ease;
 }
+
 /* }
 .dropdown{
     position: relative;
@@ -190,8 +191,14 @@
         text-align: center;
     }
     #navbar-main a{
-        padding: 0px;
-        font-size: small;
+        /* padding: 0px; */
+
+        font-size: 12px;
+        text-align: center;
+        border: 1px solid white;
+    }
+    #navbar-main .main{
+        padding: 5.5px;
     }
   }
   @media screen and (max-width: 280px) {
