--- a/jobs_finite/src/governmentportal/government.css
+++ b/jobs_finite/src/governmentportal/government.css
@@ -47,11 +47,11 @@ table, th, td {
     }
     #govtpage-main{
         width: 100%;
-        padding-left: 5px;
+        /* padding-left: 5px; */
         margin: auto 0;
     }
     #govtpage-main table{
         /* margin: auto; */
-        margin-right: 30px;
+        /* margin-right: 30px; */
     }
 }
