--- a/jobs_finite/src/governmentportal/government.css
+++ b/jobs_finite/src/governmentportal/government.css
@@ -48,10 +48,15 @@ table, th, td {
     #govtpage-main{
         width: 100%;
         /* padding-left: 5px; */
+        padding-left: 4%;
+        padding-right: 4%;
         margin: auto 0;
     }
     #govtpage-main table{
         /* margin: auto; */
         /* margin-right: 30px; */
+    }
+    #govtpage-main .gap-below{
+        padding-top: 20px;
     }
 }
