--- a/jobs_finite/src/corporateportal/onlyJob/onlyJob.css
+++ b/jobs_finite/src/corporateportal/onlyJob/onlyJob.css
@@ -49,3 +49,9 @@ hr.solid {
 .remove-padding table td{
     padding: 10px;
 }
+@media screen and (max-width: 450px) {
+    #onlyjobpage-main{
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
