--- a/jobs_finite/src/header/Header.css
+++ b/jobs_finite/src/header/Header.css
@@ -26,6 +26,7 @@
     transform: -webkit-translate(-50%, -50%);
     transform: -moz-translate(-50%, -50%);
     transform: -ms-translate(-50%, -50%);
+    z-index: 2;
 }
 
 
